--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.BukuCatatanPermateri"
         tools:targetApi="31">
         <activity
-            android:name=".API.ApiActivity"
+            android:name=".API.ui.RegisterActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,16 +23,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RecylerViewActivity"
+            android:name=".API.ui.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".API.ApiActivity"
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".RecylerViewActivity"
+            android:exported="true" />
         <activity
             android:name=".MenuActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity2"
             android:exported="false" />
